# td-base-python-automations

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  RESUMO_FINAL.txt  build.sh  env.example  examples_advanced.py  pyproject.toml  run_tests.sh  setup.py  test_installation.py
automacoes_python_base_td/: __init__.py  cli.py
automacoes_python_base_td/aws/: __init__.py  client.py  cloudwatch.py  s3.py
automacoes_python_base_td/core/: __init__.py  exceptions.py
automacoes_python_base_td/database/: __init__.py  base.py  connection.py  session.py
automacoes_python_base_td/database/models/: __init__.py  base.py
automacoes_python_base_td/database/models/automations/: __init__.py  example_automation_job.py.example
automacoes_python_base_td/database/models/tdax/: __init__.py  auto_dctf_download.py  auto_dctf_retificacoes.py  certificate.py  empresas.py  example_cliente.py.example  organizacoes.py  payments.py  privilegios.py  session_gov.py  sped.py  speds_retificados.py  users.py
automacoes_python_base_td/database/queries/: crud.py
automacoes_python_base_td/database/repositories/: __init__.py  certificate_repository.py  crud.py  dctf_repository.py  empresa_repository.py  get_cookies.py  get_path_dec.py  organization_repository.py  privilegios_repository.py  session_repository.py  sped_repository.py
automacoes_python_base_td/files/: PROJECT_STRUCTURE.txt  env.example
automacoes_python_base_td/logger/: __init__.py  config.py
automacoes_python_base_td/quick_start/: .gitignore  README.md  pyproject.toml  requirements.txt
automacoes_python_base_td/quick_start/examples/: 01_basic_usage.py  02_database_basic.py  03_database_sqlalchemy.py  04_aws_s3.py  05_rabbitmq.py  06_logger.py  07_utils.py  08_exceptions.py  09_taskipy.py  README.md
automacoes_python_base_td/rabbitmq/: __init__.py  connection.py  consumer.py  publisher.py
automacoes_python_base_td/settings/: __init__.py  aws.py  base.py  database.py  logger.py  rabbitmq.py  settings.py
automacoes_python_base_td/utils/: __init__.py  date_utils.py  file_utils.py  string_utils.py
test/: README_TESTS.md  conftest.py
test/test_aws/: __init__.py
test/test_cli/: test_cli.py
test/test_database/: __init__.py  test_connection.py
test/test_logger/: test_config.py
test/test_package/: test_package_build.py
test/test_utils/: __init__.py  test_date_utils.py  test_string_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_crud.py  test_settings.py  test_utils.py
tests/examples/: example_exceptions.py  example_modular.py  example_usage.py  exemplo_aws_cloudwatch.py  exemplo_aws_s3.py  exemplo_database_psycopg2.py  exemplo_database_sqlalchemy.py  exemplo_logger.py  exemplo_rabbitmq_consumer.py  exemplo_rabbitmq_publisher.py  exemplo_settings.py  exemplo_settings_unified.py  exemplo_utils.py
tests/test_aws/: test_s3.py
tests/test_core/: __init__.py  test_exceptions.py
tests/test_database/: test_connection.py  test_crud.py  test_session.py
tests/test_logger/: __init__.py  test_config.py
tests/test_rabbitmq/: __init__.py  test_connection.py
tests/test_settings/: __init__.py  test_base.py
tests/test_utils/: test_date_utils.py  test_string_utils.py
