[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automacoes-python-base-td"
version = "0.2.0"
description = "Pacote base com funções de automação e conexão com banco de dados para TD"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "TD Company", email = "dev@td.com"},
    {name = "Leonardo de Lima", email = "leonardo.lima@tributodevido.com.br"},
    {name = "Leonardo de Lima", email = "leonardodelima98@outlook.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "boto3>=1.28.0",
    "loguru>=0.7.0",
    "pika>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
    "taskipy>=1.12.0",
]

[project.scripts]
td-init = "automacoes_python_base_td.cli:main"

[project.urls]
Homepage = "https://github.com/td-company/automacoes-python-base-td"
Repository = "https://github.com/td-company/automacoes-python-base-td"

[tool.setuptools.packages.find]
where = ["."]
include = ["automacoes_python_base_td*"]
exclude = ["tests*", "*.tests", "*.tests.*", "test*"]

[tool.setuptools.package-data]
automacoes_python_base_td = [
    "quick_start/**/*",
    "quick_start/**/.*",
]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
test = "pytest -v"
test-cov = "pytest --cov=automacoes_python_base_td --cov-report=html --cov-report=term"
clean = "find . -type d -name '__pycache__' -exec rm -rf {} + && find . -type f -name '*.pyc' -delete"
build = "python -m build"
install-dev = "pip install -e '.[dev]'"
all-checks = "task format && task lint && task test"

